Col 3 overflow fixed + user search added - 8 Sep 2022

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,3 +21,8 @@ body {
 .display-none {
   display: none;
 }
+
+.ce-settings-column {
+  border: 4px dotted peru;
+  overflow: scroll;
+}
